[gd_scene load_steps=2 format=3 uid="uid://c36aavhfqqqo2"]

[ext_resource type="Script" uid="uid://s5a66uwouihv" path="res://ui/inventory/InventorySlotUI.gd" id="1_bwjvo"]

[node name="InventorySlotUI" type="Button"]
custom_minimum_size = Vector2(390, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_bwjvo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
horizontal_alignment = 2
